<resources>
    <string name="app_name">Wolf and Sheep</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="open_source">About me</string>
    <string name="close">Close</string>
    <string name="connect_title">Wait for connection</string>
    <string name="renew">Renew</string>
    <string name="create">Create</string>
    <string name="room_name">Room name</string>
    <string name="join">Join</string>
</resources>
